Fix AssertNoURLRequests crash in system request context.

This issue was caused by calling AssertNoURLRequests on the
SystemRequestContext before the NetworkContext (Which may own
URLLoaders) was torn down. Since the NetworkContext also owns the
SystemRequestContext, the solution was just to remove the
AssertNoURLRequests call.  URLRequestContextBuilder's URLRequestContext
implementation calls it, anyways.

This CL also moves NetworkQualityEstimator above the NetworkContext,
so it will be destroyed after the NetworkContext, which is needed if
there are live requests during NetworkContext teardown.

Bug: 816572
Change-Id: Ief3ca156d8c5edc8205bba7aaa22a24ec4fdb066
Reviewed-on: https://chromium-review.googlesource.com/939742
Commit-Queue: Matt Menke <mmenke@chromium.org>
Reviewed-by: Randy Smith <rdsmith@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539609}
Former-commit-id: d9ec7077b9e1094f6cee2ce7921386d1763bd6c4